--- a/VirtualGamepad4Windows/VirtualGamepad4Windows.csproj
+++ b/VirtualGamepad4Windows/VirtualGamepad4Windows.csproj
@@ -43,6 +43,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VGForm\VGForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VGForm\VGForm.Designer.cs">
+      <DependentUpon>VGForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VGForm\WinProgs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VGForm\WinProgs.Designer.cs">
+      <DependentUpon>WinProgs.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -60,5 +73,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
