--- a/VirtualGamepad4Windows/VirtualGamepad4Windows.csproj
+++ b/VirtualGamepad4Windows/VirtualGamepad4Windows.csproj
@@ -42,10 +42,16 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="VGControl\CommandService.cs" />
     <Compile Include="VGControl\ControlService.cs" />
     <Compile Include="VGControl\InputMethods.cs" />
     <Compile Include="VGControl\ITouchpadBehaviour.cs" />
+    <Compile Include="VGControl\Log.cs" />
     <Compile Include="VGControl\Mapping.cs" />
     <Compile Include="VGControl\Mouse.cs" />
     <Compile Include="VGControl\MouseCursor.cs" />
@@ -108,6 +114,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="VGForm\VGForm.resx">
       <DependentUpon>VGForm.cs</DependentUpon>
     </EmbeddedResource>
